# cc2rep

./: .gitignore  Cargo.toml  README.md  config.example.json
.github/workflows/: ci.yml
src/: app.rs  cli.rs  config.rs  error.rs  handlers.rs  hosted.rs  lib.rs  main.rs  metrics.rs  normalize.rs  probe.rs  protocol.rs  response.rs  store.rs  stream.rs  tools.rs  translate.rs  upstream.rs
src/app/: exec.rs  helpers.rs  mod.rs  restore.rs  store_ext.rs  streaming.rs  tests.rs
tests/: e2e_completion.rs  e2e_config.rs  e2e_health.rs  e2e_mimo.rs  e2e_response.rs  e2e_stats.rs  e2e_tools.rs
tests/common/: mod.rs
