[package]
name = "cc2rep"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cc2rep"
path = "src/main.rs"
test = false

[dependencies]
async-stream = "0.3.6"
axum = { version = "0.8.6", default-features = false, features = ["json", "matched-path", "tokio", "http1"] }
clap = { version = "4.5.53", default-features = false, features = ["derive", "std", "help", "usage"] }
futures-util = { version = "0.3.31", default-features = false }
http = "1.3.1"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0.228", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0.145", default-features = false }
thiserror = "2.0.17"
tokio = { version = "1.48.0", default-features = false, features = ["io-util", "macros", "net", "process", "rt-multi-thread", "time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", default-features = false, features = ["env-filter", "fmt", "registry"] }
uuid = { version = "1.18.1", default-features = false, features = ["v4"] }

[dev-dependencies]
http-body-util = "0.1.3"
tempfile = "3.23.0"
tower = { version = "0.5.2", default-features = false, features = ["util"] }

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
